artemis/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activemq-artemis
spec:
  selector:
    app: activemq-artemis
  ports:
    - protocol: TCP
      port: 61616
      targetPort: 61616
    - protocol: TCP
      port: 8161
      targetPort: 8161
